Polished it up a bit.

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
         <form id="place-search">
             <fieldset>
-                <label for="place">Enter a place in the US to receive the current weather and a 5-day forecast.</label>
+                <label for="place">Enter a place in the US to discover the weather</label>
                 <input id="place" type="search" required>
                 <button id="search" type="submit">Find</button>
             </fieldset>
